# locksearch

./: .gitignore  Cargo.toml  README.md  build.rs  config.yaml
src/: config.rs  indexer.rs  main.rs  platform.rs  search.rs  ui.rs
