[package]
name = "locksearch"
version = "0.2.0"
edition = "2021"
description = "A fast, modern Windows program launcher with fuzzy search"
readme = "README.md"
keywords = ["launcher", "windows", "search", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
iced = { version = "0.12", features = ["tokio", "image", "svg"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
fuzzy-matcher = "0.3"
open = "5"
dirs = "5"
lnk = "0.5"
systemicons = "0.7"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
